[package]
name = "ratelimit"
version = "0.4.5-alpha.0"
authors = ["Brian Martin <brayniac@gmail.com>"]

license = "MIT/Apache-2.0"

description = "a token bucket ratelimiter"

homepage = "https://github.com/brayniac/ratelimit"
documentation = "https://docs.rs/ratelimit"
repository = "https://github.com/brayniac/ratelimit"

readme = "README.md"

keywords = [ "ratelimit", "tokenbucket", "rate", "token", "bucket" ]

[dependencies]

[dev-dependencies]
lazy_static = "1.4.0"

[features]
unstable = []
