[package]
name = "ratelimit"
version = "0.5.0"
authors = ["Brian Martin <brayniac@gmail.com>", "DCjanus <DCjanus@dcjanus.com>"]
edition = "2018"

license = "MIT/Apache-2.0"

description = "a token bucket ratelimiter"

homepage = "https://github.com/brayniac/ratelimit"
documentation = "https://docs.rs/ratelimit"
repository = "https://github.com/brayniac/ratelimit"

readme = "README.md"

keywords = ["ratelimit", "tokenbucket", "rate", "token", "bucket"]
